--- a/Javascript/Consumo_APIs/projeto-Cad-Endereco/main.css
+++ b/Javascript/Consumo_APIs/projeto-Cad-Endereco/main.css
@@ -1,6 +1,10 @@
 #centro {
-            text-align: center;
-            width: 50%;
-            margin-left: auto;
-            margin-right: auto;
-        }
+    text-align: center;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+body{
+    background-color: rgb(95, 128, 117);
+    color: white;
+}
